# playground

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: vcpkg.cmake
journals/: 2023-08-20_ghidra_8bit_cpu_woes.md  README.md
resources/: 8051_ISA.cpp  8051_ISA.txt  TLCS900_ISA.cpp
resources/flipdot/00_FGY_7x96/: readme.txt
resources/flipdot/01_FGY_128x16/: readme.txt
resources/flipdot/01_FGY_128x16/distributor/: distributor.kicad_pro  distributor.kicad_sch  project_library.kicad_sym
resources/flipdot/01_FGY_128x16/distributor/project_footprints.pretty/: Spade_D1.0mm_L5.0mm.kicad_mod
resources/flipdot/02_FGY_128x16/: readme.txt
resources/flipdot/03_BUSE_28x16/: program_asm.txt  readme.txt
resources/flipdot/04_FGY_head_unit/: readme.txt
resources/flipdot/05_Mobidot_19x112/: readme.txt
resources/flipdot/06_BUSE_98+28x16/: readme.txt
resources/xgpro/: README.md  SST_27SF512_ID_DA08.ULI
src/ffmpeg_sync/: CMakeLists.txt  README.md
src/ffmpeg_sync/src/: ffmpeg.hpp  ffmpeg_video.cpp  ffmpeg_video.hpp  ffmpeg_wrappers.cpp  ffmpeg_wrappers.hpp  main.cpp
src/flipdot_firmware/: CMakeLists.txt
src/flipdot_firmware/scripts/: concat.py
src/flipdot_firmware/src/: main.c
src/imgui_demo/: CMakeLists.txt
src/imgui_metal_demo/: CMakeLists.txt
src/imgui_metal_demo/src/: main.mm
src/slow_rays/: CMakeLists.txt  README.md
src/slow_rays/src/: main.cpp
toolchains/: Toolchain-80C32.cmake
